syntax = "proto3";

message News{
  string id = 1;
  string body = 2;
  string postImage = 3;
  string title = 4;
}

service NewsService{
  rpc GetAllNews(Empty) returns (NewsList) {}
  rpc GetNews(NewsId) returns (News) {}
  rpc EditNews(News) returns (News) {}
  rpc DeleteNews(NewsId) returns (Empty) {}
  rpc AddNews(News) returns (News) {}
}


message Empty {}

message NewsId {
  string id = 1;
}

message NewsList{
  repeated News newsList = 1;
}